# TryAllUseful

./: README.md
TestAllUseful/: main.cpp
testFunctor/: main.cpp
testGetAppPath/: main.cpp
testGetOpt/: main.cpp
testMacroWithVariableParameters/: main.cpp
testSubAgent/: Test.c  Test.h  netsnmptmp.4044.c
testUseSnmp/: main.cpp
test_glibc_bug/: main.cpp
tryBasicApp/tryBasicApp/: AppDelegate.h  AppDelegate.m  Info.plist  main.m  (+2 more)
tryBasicApp/tryBasicApp.xcodeproj/: project.pbxproj
tryCStackOperation/: FakeThreadLock.cpp  FakeThreadLock.h  FakeThreadStackOperation.s  FakeThreadStackOperation_mac.s  FakeThreadStackOperation_win64.s  FakeThreadTemplate.cpp  FakeThreadTemplate.h  FakeThreadTemplate_i.h  FakeThreadWrap.cpp  FakeThreadWrap.h  Makefile.am  StackOperation.s  configure.in  hello.asm  main.cpp  makefile  makefile_asm  testFakeThreadWrap.cpp  testFakeThreadWrap.h  tryChangeStackCall.cpp  tryChangeStackCall.h
tryFaskConfig/: FastConfig.cpp  FastConfig.h  MarkupSTL.cpp  MarkupSTL.h  main.cpp  makefile  testFastConfig.cpp  testFastConfig.h
tryFtRpc/: ftrpc.cpp  ftrpc.h  ftrpc_callable.cpp  ftrpc_callable.h  ftrpc_callable_manager.cpp  ftrpc_callable_manager.h  ftrpc_pack_basic.cpp  ftrpc_pack_basic.h  ftrpc_pack_container.cpp  ftrpc_pack_container.h  main.cpp  makefile  test_ftrpc.cpp  test_ftrpc.h
tryFtSocket/: Makefile.am  configure.in  ftCheckValid.cpp  ftCheckValid.h  ftduration.cpp  ftduration.h  ftnetbuffer.cpp  ftnetbuffer.h  ftnetselect.cpp  ftnetselect.h  ftoswrap.cpp  ftoswrap.h  ftsocket.cpp  ftsocket.h  gen_FtSocket.sh  main.cpp  makefile  test_ftsocket.cpp  test_ftsocket.h
tryMediaThread/: main.cpp
tryProductConsume/: ftProductConsume.cpp  ftProductConsume.h  main.cpp  makefile  testProductConsume.cpp  testProductConsume.h
tryRapidXml/: main.cpp  makefile  test_rapidxml.cpp  test_rapidxml.h
(+3 files in other folders)
