#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT([CStackOperation], [0.1], [liyoudi@megaeyes.com])
AC_CONFIG_SRCDIR([FakeThreadWrap.cpp])
#AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(CStackOperation, 0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([memset strerror])

OS_BIT_64_=`getconf  LONG_BIT`
AM_CONDITIONAL(OS_64_, [test "${OS_BIT_64_}" = "64"])

echo "OS_BIT_64_ is "${OS_BIT_64_}

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
